# ace

./: .gitignore  CMakeLists.txt  README.md  config.json  generate.bat
cmake/: FindALURE.cmake  FindGLM.cmake  FindSDL2_image.cmake
include/: camera.h  common.h  game_client.h  kv6.h  net.h  vxl.h  weapon.h
include/draw/: billboard.h  debug.h  draw.h  font.h  gui.h  kv6.h  map.h  sprite.h
include/gl/: gl_obj.h  gl_util.h  shader.h
include/glad/: glad.h
include/net/: net.h  packet.h  url.h
include/scene/: block_test.h  game.h  hud.h  loading.h  map_editor.h  menu.h  scene.h
include/sound/: sound.h
include/util/: event.h  except.h
include/world/: debris.h  entity.h  falling_blocks.h  grenade.h  player.h  tracer.h  world.h
png_placeholders/: README
python_bindings/: bind_client.cpp  bind_draw.cpp  bind_font.cpp  bind_gl.cpp  bind_glm.cpp  bind_map.cpp  bind_map_editor.cpp  bind_sdl.cpp  bindings.cpp  bindings.h
python_bindings/scripts/: commands.py  loader.py
python_bindings/scripts/editor/: __init__.py  scene.py  tools.py
python_bindings/scripts/stubs/ace/: __init__.pyi
python_bindings/scripts/stubs/ace/draw/: __init__.pyi
python_bindings/scripts/stubs/ace/editor/: __init__.pyi
python_bindings/scripts/stubs/ace/font/: __init__.pyi
python_bindings/scripts/stubs/ace/gl/: __init__.pyi
python_bindings/scripts/stubs/ace/glm/: __init__.pyi
python_bindings/scripts/stubs/ace/map/: __init__.pyi
shaders/: bb.frag  bb.geom  bb.vert  line.frag  line.vert  map.frag  map.vert  model.frag  model.vert  sprite.frag  sprite.vert  text.frag  text.geom  text.vert
src/: camera.cpp  game_client.cpp  kv6.cpp  main.cpp  net.cpp  vxl.cpp  weapon.cpp
src/binding/: bind_draw.cpp  bind_font.cpp  bind_gl.cpp  bind_sdl.cpp
src/draw/: billboard.cpp  debug.cpp  font.cpp  gui.cpp  kv6.cpp  map.cpp  sprite.cpp
src/gl/: gl_util.cpp  glad.c  shader.cpp
src/net/: net.cpp  packet.cpp  url.cpp
src/scene/: block_test.cpp  game.cpp  hud.cpp  loading.cpp  map_editor.cpp  menu.cpp  scene.cpp
src/sound/: sound.cpp
src/util/: event.cpp
src/world/: debris.cpp  entity.cpp  falling_blocks.cpp  grenade.cpp  player.cpp  tracer.cpp  world.cpp
